# anki_sketching

./: .gitignore  CLAUDE.md  README.md  app.py  build_graph.py  card_positions.json  check_card_due.py  package-lock.json  package.json  pyproject.toml  run.sh  start.sh  to-do.md  todo.md
data/: .gitkeep  card_info.db.bak  card_positions.json  cards.db  graph.db
frontend/static/css/: app.css  learn.css
frontend/static/js/: anki_status.js  arrows.js  bootstrap.js  canvas.js  cards.js  due_cards.js  globals.js  groups.js  local_cards.js  physics.js  resize.js  reviewer.js  selection.js  storage.js
frontend/static/js/learn/: main.js
frontend/templates/: index.html  learn.html
src/anki_interface/: __init__.py  card.py  get_all_decks.py  get_card_information.py  get_card_scheduling.py  get_cards_ids.py  get_collection_crt.py  utils.py
src/anki_sketching/: __init__.py  main.py
src/anki_sketching.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/anki_sketching/api/: routes.py
src/anki_sketching/learn/: routes.py
src/anki_sketching/web/: __init__.py  routes.py
src/graph/: README.md  __init__.py  blocking.py  card_info.py  cards_db.py  local_cards.py  parse_graph.py  schema.py  srs.py  sync_card_state.py
src/utilities/: paths.py
templates/: index.html
